@@ -95,6 +95,15 @@ void QtFallbackWebPopup::show()
 {
     populate();
     m_combo->setCurrentIndex(currentIndex());
+
+#if defined(Q_WS_MAEMO_5)
+    // Comboboxes with Qt on Maemo 5 come up in their full width on the screen, so neither
+    // the proxy widget, nor the coordinates are needed.
+    m_combo->setParent(pageClient()->ownerWidget());
+    m_combo->showPopup();
+    return;
+#endif
+
     QRect rect = geometry();
     if (QGraphicsWebView *webView = qobject_cast<QGraphicsWebView*>(pageClient()->pluginParent())) {
         if (!m_proxy) {
@@ -110,16 +119,11 @@ void QtFallbackWebPopup::show()
 
     }
 
-    // QCursor::pos() is not a great idea for a touch screen, but we don't need the coordinates
-    // as comboboxes with Qt on Maemo 5 come up in their full width on the screen.
-    // On the other platforms it's okay to use QCursor::pos().
-#if defined(Q_WS_MAEMO_5)
-    m_combo->showPopup();
-#else
+    // QCursor::pos() is not a great idea for a touch screen, but as Maemo 5 is handled
+    // separately above, this should be okay.
     QMouseEvent event(QEvent::MouseButtonPress, QCursor::pos(), Qt::LeftButton,
                       Qt::LeftButton, Qt::NoModifier);
     QCoreApplication::sendEvent(m_combo, &event);
-#endif
 }
 
 void QtFallbackWebPopup::hide()
